--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/png" href="logo.png">
+<link rel="apple-touch-icon" href="logo.png">
 
 <meta name="theme-color" content="#ffb703">
 <title>Vaishnav Delights – Buy Pure & Authentic Thekua Online in India</title>
