--- a/index.html
+++ b/index.html
@@ -959,10 +959,14 @@ body{
         <strong>₹<span id="finalTotal">0</span></strong>
       </div>
 
-      <button class="btn" style="width:100%;margin-top:14px"
-  onclick="startOnlinePayment()">
+      <button
+  id="payActionBtn"
+  class="btn"
+  style="width:100%;margin-top:14px"
+  onclick="handlePaymentAction()">
   Pay Now
 </button>
+
 
 
     </div>
@@ -2502,6 +2506,11 @@ function selectPay(method){
   document.getElementById('finalTotal').innerText = total;
   document.getElementById('codNote').style.display =
     method === 'cod' ? 'block' : 'none';
+
+  const btn = document.getElementById('payActionBtn');
+if(btn){
+  btn.innerText = method === 'cod' ? 'Pay on Delivery' : 'Pay Now';
+}
 }
 async function placeFinalOrder(paymentMethod, total, paymentId='', rpOrderId='', rpSignature=''){
 
@@ -2645,6 +2654,10 @@ function selectSavedAddress(i){
   // ✅ Show correct Continue button
   const btn = document.getElementById('continuePayBtn');
   if(btn) btn.style.display = 'block';
+
+  window._selectedPhone = a.phone || window._selectedPhone || '';
+
+  document.getElementById('continuePayBtn').style.display = 'block';
 }
 
 
@@ -2748,16 +2761,102 @@ document.getElementById('co_pincode')?.addEventListener('input', function(){
   }
 });
 
- 
 async function startOnlinePayment(){
 
-  if(!currentUser || !currentUser.email || currentUser.email === 'guest'){
+  if(!currentUser || currentUser.email === 'guest'){
+    showToast('Please login');
+    switchPage('loginPage');
+    return;
+  }
+
+  if(!window._selectedAddress || !window._selectedPhone){
+    showToast('Please select delivery address');
+    switchPage('checkoutAddressPage');
+    return;
+  }
+
+  let total = calculateCartTotal();
+  const payMethod =
+    document.querySelector('input[name="pay"]:checked')?.value || 'upi';
+
+  // ✅ COD SAFE FLOW
+  if(payMethod === 'cod'){
+    placeFinalOrder('cod', total + 40);
+    return;
+  }
+
+  // ONLINE PAYMENT
+  const order = await apiCall({
+    action: 'create_razorpay_order',
+    total
+  });
+
+  if(!order || order.status !== 'ok'){
+    showToast('Payment init failed');
+    return;
+  }
+
+  const rzp = new Razorpay({
+    key: RAZORPAY_KEY,
+    amount: total * 100,
+    currency: "INR",
+    order_id: order.razorpay_order_id,
+    name: "Vaishnav Delights",
+    handler: function(res){
+      placeFinalOrder(
+        payMethod,
+        total,
+        res.razorpay_payment_id,
+        res.razorpay_order_id,
+        res.razorpay_signature
+      );
+    }
+  });
+
+  rzp.open();
+}
+
+  document.addEventListener('DOMContentLoaded', () => {
+
+  const payMethod =
+    document.querySelector('input[name="pay"]:checked')?.value;
+
+  const btn = document.getElementById('payActionBtn');
+
+  if(!btn) return;
+
+  if(payMethod === 'cod'){
+    btn.innerText = 'Pay on Delivery';
+  } else {
+    btn.innerText = 'Pay Now';
+  }
+
+});
+
+
+function handlePaymentAction(){
+
+  const payMethod =
+    document.querySelector('input[name="pay"]:checked')?.value || 'upi';
+
+  if(payMethod === 'cod'){
+    // COD → direct order
+    startCODOrder();
+  } else {
+    // Online → Razorpay
+    startOnlinePayment();
+  }
+}
+
+  function startCODOrder(){
+
+  if(!currentUser || currentUser.email === 'guest'){
     showToast('Please login to continue');
     switchPage('loginPage');
     return;
   }
 
-  if(!window._selectedAddress){
+  if(!window._selectedAddress || !window._selectedPhone){
     showToast('Please select delivery address');
     switchPage('checkoutAddressPage');
     return;
@@ -2765,67 +2864,11 @@ async function startOnlinePayment(){
 
   let total = calculateCartTotal();
 
-  if(!total || total <= 0){
-    showToast('Invalid order amount');
-    return;
-  }
+  // COD charge
+  total += 40;
 
-  const payMethod =
-    document.querySelector('input[name="pay"]:checked')?.value || 'upi';
-
-  // COD → direct order
-  if(payMethod === 'cod'){
-    placeFinalOrder('cod', total + 40);
-    return;
-  }
-
-  // ONLINE PAYMENT
-  showLoader('Redirecting to payment…');
-
-  const order = await apiCall({
-    action: 'create_razorpay_order',
-    total: total
-  });
-
-  hideLoader();
-
-  if(!order || order.status !== 'ok'){
-    showToast('Payment not initiated');
-    return;
-  }
-
-  const options = {
-    key: RAZORPAY_KEY,
-    amount: total * 100,
-    currency: "INR",
-    name: "Vaishnav Delights",
-    description: "Order Payment",
-    order_id: order.razorpay_order_id,
-
-    prefill: {
-      name: currentUser.name,
-      email: currentUser.email
-    },
-
-    handler: function (response) {
-      placeFinalOrder(
-        payMethod,
-        total,
-        response.razorpay_payment_id,
-        response.razorpay_order_id,
-        response.razorpay_signature
-      );
-    },
-
-    theme: {
-      color: "#fb8500"
-    }
-  };
-
-  const rzp = new Razorpay(options);
-  rzp.open();
+  placeFinalOrder('cod', total);
 }
-
 
 
 </script>
