--- a/index.html
+++ b/index.html
@@ -1997,6 +1997,7 @@ async function signupWithOTP(){
         currentUser = { email, role:'customer', name };
 
         loadCart();
+        await loadAddressesFromServer();
         closeOtpModal();
         showToast('Signup successful');
         switchPage('customerPage');
@@ -2629,12 +2630,12 @@ function goCheckout(){
 }
 
 
-  function saveAddressAndContinue(){
+ async function saveAddressAndContinue(){
 
   const addr = {
     fname: co_fname.value.trim(),
     lname: co_lname.value.trim(),
-    phone: co_phone.value.trim(), // 🔥 MUST BE SAVED HERE
+    phone: co_phone.value.trim(),
     house: co_house.value.trim(),
     area: co_area.value.trim(),
     landmark: co_landmark.value.trim(),
@@ -2644,21 +2645,31 @@ function goCheckout(){
     type: document.querySelector('input[name="addrType"]:checked')?.value || 'Home'
   };
 
-  if(!addr.fname || !addr.lname || !addr.house || !addr.area ||
-     !addr.city || !addr.state || !addr.pincode){
+  if(!addr.fname || !addr.lname || !addr.phone || !addr.house ||
+     !addr.area || !addr.city || !addr.state || !addr.pincode){
     showToast('Fill all address fields');
     return;
   }
 
-  if(!addr.phone || addr.phone.length !== 10){
+  if(addr.phone.length !== 10){
     showToast('Enter valid 10 digit mobile number');
     return;
   }
 
-  // ✅ save address list
-  let list = getSavedAddresses();
-  list.unshift(addr);
-  localStorage.setItem(addressKey(), JSON.stringify(list.slice(0,5)));
+  // 🔥 BACKEND SAVE (MAIN FIX)
+  const res = await apiCall({
+    action: 'save_address',
+    email: currentUser.email,
+    ...addr
+  });
+
+  if(!res || res.status !== 'ok'){
+    showToast('Address save failed');
+    return;
+  }
+
+  // 🔁 reload addresses from backend
+  await loadAddressesFromServer();
 
   // ✅ set selected values
   window._selectedAddress =
@@ -2666,11 +2677,9 @@ function goCheckout(){
 
   window._selectedPhone = addr.phone;
 
-  renderSavedAddressUI();
-
-  const btn = document.getElementById('continuePayBtn');
-  if(btn) btn.style.display = 'block';
+  showToast('Address saved');
 }
+
 
 
   
@@ -3121,6 +3130,25 @@ function loadOrderTimeline(orderId, currentStatus){
       `;
     });
   });
+}
+
+  // ===== Address helpers =====
+async function loadAddressesFromServer(){
+  if(!currentUser || !currentUser.email) return;
+
+  try{
+    const res = await apiCall({
+      action: 'get_addresses',
+      email: currentUser.email
+    });
+
+    if(res && res.status === 'ok'){
+      localStorage.setItem(addressKey(), JSON.stringify(res.addresses || []));
+      renderSavedAddressUI();
+    }
+  }catch(err){
+    console.error('loadAddressesFromServer error', err);
+  }
 }
 
   
